--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,5 +24,14 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "vite": "^7.2.4"
+  },
+  "scripts": {
+    "dev": "vite",
+    "clean": "rm -rf node_modules/.vite node_modules/.cache dist",
+    "dev:clean": "npm run clean && vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
+
 }
+
