--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "clean": "rm -rf node_modules/.vite node_modules/.cache dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.13.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -24,14 +26,5 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "vite": "^7.2.4"
-  },
-  "scripts": {
-    "dev": "vite",
-    "clean": "rm -rf node_modules/.vite node_modules/.cache dist",
-    "dev:clean": "npm run clean && vite",
-    "build": "vite build",
-    "preview": "vite preview"
   }
-
 }
-
